--- a/templates/base.html
+++ b/templates/base.html
@@ -11,20 +11,36 @@
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <style>
+      .thin-icon {
+          font-size: 0.8em;
+          font-weight: 100;
+      }
+      .delete-chat {
+        opacity: 0.7;
+        transition: opacity 0.2s;
+      }
+      .delete-chat:hover {
+          opacity: 1;
+      }
+    </style>
   </head>
   <body>
     <div class="container-fluid vh-100 d-flex p-0">
-      <!-- 좌측 리스트 그룹 -->
       <div class="p-3" style="width: 300px; background-color: #1e1e1e;">
-          <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-              <span class="fs-5 fw-semibold text-white">List Group</span>
+          <a href="/" class="d-flex align-items-center justify-content-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+            <span class="fs-5 fw-semibold text-white text-center">AI 챗봇</span>
           </a>
           <div class="list-group list-group-flush border-bottom scrollarea" style="height: calc(100vh - 80px); overflow-y: auto;">
               {% for item in history %}
                   <a href="/history/{{ item.history_id }}" class="list-group-item list-group-item-action active py-3 lh-sm mb-3" aria-current="true" style="background-color: #333; color: white;">
                       <div class="d-flex w-100 align-items-center justify-content-between">
                           <strong class="mb-1">{{ item.chat[0].user|truncate(15, True, '...') }}</strong>
-                          <small>Wed</small>
+                          <small>
+                            <button class="btn btn-link text-white p-0 delete-chat" data-history-id="{{ item.history_id }}">
+                              <i class="fas fa-trash-alt thin-icon"></i>
+                          </button>
+                          </small>
                       </div>
                   </a>
               {% endfor %}
