--- a/templates/chat.html
+++ b/templates/chat.html
@@ -13,7 +13,7 @@ AI Chatbot
                 <!-- 채팅 메시지 표시 영역 -->
             </div>
             <div class="input-group">
-                <input type="text" id="user-input" class="form-control" placeholder="Type your message here..." autocomplete="off" style="background-color: #2c2c2c; color: #ffffff;">
+                <input type="text" id="user-input" class="form-control" placeholder="질문 사항을 남겨주세요." autocomplete="off" style="background-color: #2c2c2c; color: #ffffff;">
                 <button id="send-btn" class="btn btn-primary">Send</button>
             </div>
         </div>
