--- a/templates/base.html
+++ b/templates/base.html
@@ -27,27 +27,39 @@
   </head>
   <body>
     <div class="container-fluid vh-100 d-flex p-0">
-      <div class="p-3" style="width: 300px; background-color: #1e1e1e;">
-          <a href="/" class="d-flex align-items-center justify-content-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-            <span class="fs-5 fw-semibold text-white text-center">AI 챗봇</span>
-          </a>
-          <div class="list-group list-group-flush border-bottom scrollarea" style="height: calc(100vh - 80px); overflow-y: auto;">
-              {% for item in history %}
-                  <a href="/history/{{ item.history_id }}" class="list-group-item list-group-item-action active py-3 lh-sm mb-3" aria-current="true" style="background-color: #333; color: white;">
-                      <div class="d-flex w-100 align-items-center justify-content-between">
-                          <strong class="mb-1">{{ item.chat[0].user|truncate(15, True, '...') }}</strong>
-                          <small>
-                            <button class="btn btn-link text-white p-0 delete-chat" data-history-id="{{ item.history_id }}">
-                              <i class="fas fa-trash-alt thin-icon"></i>
-                          </button>
-                          </small>
-                      </div>
-                  </a>
-              {% endfor %}
+      <div id="sidebar" class="p-0" style="width: 300px; background-color: #1e1e1e;">
+        <div class="d-flex flex-column h-100">
+          <div class="p-3">
+            <a href="/" class="d-flex align-items-center justify-content-center flex-shrink-0 link-light text-decoration-none">
+                <span class="fs-5 fw-semibold">AI 챗봇</span>
+            </a>
           </div>
+          <div class="px-3">
+            <hr class="border-light border-1 w-100 my-0">
+          </div>
+          <div class="list-group list-group-flush scrollarea flex-grow-1 p-3" style="overflow-y: auto;">
+            {% for item in history %}
+              <a href="/history/{{ item.history_id }}" class="list-group-item list-group-item-action rounded-3 mb-2 border border-secondary bg-dark text-white">
+                <div class="d-flex w-100 align-items-center justify-content-between py-2">
+                    <strong class="mb-1">{{ item.chat[0].user|truncate(15, True, '...') }}</strong>
+                    <button class="btn btn-link btn-sm text-white-50 delete-chat" data-history-id="{{ item.history_id }}">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                </div>
+              </a>
+            {% endfor %}
+          </div>
+        </div>
       </div>
-      {% block content %}
-      {% endblock %}
+
+      <div class="flex-grow-1 d-flex flex-column">
+        <div class="p-2" style="background-color: #1e1e1e;">
+          <button class="btn btn-link btn-sm text-white" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+        </div>
+        <div class="flex-grow-1">
+          {% block content %}{% endblock %}
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
