--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,7 @@
           opacity: 1;
       }
       .font-white {
-          color: white;
-      }
-      .font-white:hover {
-          color: black;
+        color: white !important;
       }
     </style>
   </head>
@@ -76,7 +73,7 @@
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item font-white" href="{{ url_for('logout') }}">로그아웃</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item font-white" href="{{ url_for('login') }}">계정전환</a></li>
+                          <li><a class="dropdown-item font-white" href="{{ url_for('profile') }}">계정전환</a></li>
                       </ul>
                   </li>
               </ul>
