계정전환 토글 loing

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item font-white" href="{{ url_for('logout') }}">로그아웃</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item font-white" href="{{ url_for('profile') }}">계정전환</a></li>
+                          <li><a class="dropdown-item font-white" href="{{ url_for('login') }}">계정전환</a></li>
                       </ul>
                   </li>
               </ul>
