--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -3,6 +3,24 @@
 {% block title %}User Profile{% endblock %}
 
 {% block content %}
+
+<style>
+    body {
+        background-color: #3c3c3c; /* 전체 웹페이지 배경을 #1E1E1E로 설정 */
+        color: #ffffff; /* 기본 텍스트 색상을 흰색으로 설정 */
+    }
+    .card {
+        background-color: #3c3c3c; /* 카드 배경 색상도 #1E1E1E로 설정 */
+        color: #ffffff; /* 카드 내부 글씨 색상 흰색으로 설정 */
+        border: 1px solid #ffffff; /* 카드에 흰색 테두리 추가 */
+        border-radius: 8px; /* 테두리의 모서리를 둥글게 설정 */
+    }
+    .modal-content {
+        background-color: #3c3c3c; /* 모달의 배경색도 동일하게 설정 */
+        color: #ffffff; /* 모달의 텍스트 색상 흰색으로 설정 */
+    }
+</style>
+
 <div class="flex-grow-1 p-3" style="background-color: #f8f9fa;">
     <div class="container">
         <h2 class="mb-4">User Profile</h2>
